# c-practice

./: .gitignore  .gitmodules  README.md
2: Simple Program Lifetime Stages/: README.md  demoApp  function.c  function.s  main.c
3: Program Execution Stages/: README.md  main.cpp  regularBuild
4: The Impact of Reusing Concept/: README.md
5: Static Libraries/: README.md  first  first.c  main.c  second.h
6: Dynamic Libraries basics/: README.md
Eigen/: CMakeLists.txt  README.md  block_operations.cpp  initializations.cpp  practice.cpp
FFI/: CMakeLists.txt  README.md  example.cpp  ffi-c.c  script.py
Makefiles/: Makefile  README.md  main
Networking/: CMakeLists.txt  README.html  README.md  tcp_client.c  tcp_client_plus.c  tcp_server.c  tcp_server_plus.c  tcpd.c
Qt/: Makefile  README.md  first.h  main  main.pro  second.c
Terminal stuff/: README.md
USB devices/: README.md
basics/: README.md  function.i  main.c
communication/: README.md
emacs/: README.md
git/: README.md
jquery/: README.md
socket.io/: README.md  index.html  index.js
template/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  class_template.cpp  class_template.cpp~  template_specialization.cpp
virtualenv/: README.md
